# batch_api

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  batch_api.gemspec
ext/batch_api/: Cargo.toml  extconf.rb
ext/batch_api/src/: lib.rs
ext/batch_api/src/vroom/: api.rs  mod.rs  request.rs  response.rs
ext/batch_api/src/zipcode_verification/: mod.rs  storage.rs  zip.rs  zipcode.rs
ext/batch_api/src/zipcode_verification/parser/: mod.rs  uk.rs  us.rs
lib/: batch_api.rb
lib/batch_api/: version.rb
sig/: batch_api.rbs
spec/: batch_api_spec.rb  spec_helper.rb
