[package]
name = "batch_api"
version = "0.1.0"
edition = "2021"
authors = ["Sam Sargent <samsarge@hotmail.co.uk>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
kml = "0.8" # managing kml & kmz files
geo = "0.28" # turning kml files into types we can actually work with
zip = "0.5.13" # kmz to kml utilities
